server/CustomerServiceAnalyzer/static/Shield/assets/css/main.css
/* ... */
.mask figcaption a {
	position: absolute;
	top:10px;
	bottom: 10px;
	right: 30px;
}


/* ==========================================================================
   Blog Section
   ========================================================================== */

.blog-bg {
	background: #2b2b2b;
	padding-right: 0px;
	padding-left: 0px;
	
}

.blog-bg h4 {
	color: #dadada;
	padding-top: 0px;
}

.blog-bg h5 {
	color: #dadada;
	font-size: 11px;
}

.blog-content {
	padding-top: 10px;
	background: #f2f2f2;
}


/* ==========================================================================
   MEDIA QUERIES
   ========================================================================== */


@media screen and (max-width:1050px), screen and (max-device-width:1050px){
	body .header{background-attachment: scroll;}
}


/*ipad portrait*/
@media only screen and (min-device-width:768px) and (max-device-width : 1024px) and (orientation : portrait){
	.header{background-attachment: scroll;}
}

@media screen and (max-width:769px) {
	#headerwrap h1 {
		font-size: 80px;
	}
	#headerwrap p {
		font-size: 30px;
		line-height: 38px;
	}
}
/* top bar trasparent*/
.navbar-wrapper {
    background: rgba(0,0,0,0.65);
}

/* top bar texts changes color when you hover over it*/
.navbar-color > li > a:hover {
    color:#3498db !important;
}

/*top bar text colors*/
.navbar-custom-color > li > a {
    color:white !important;
    font-style: bold !important;
    font-weight: 400 !important;
}

/* added gray opaque stirp on the dividers*/
.strip {
    opacity: .65;
    background-color: #141414;
    max-width: 100%;
    font-style: bold;
    padding-top: 10px;
    padding-bottom: 10px;
    margin:0;
}
.linkedicon {
    color: #3498db;
}

.bodyimage {
    background-image: url('../img/CityBridge.jpg');
}




/*.graybox {
    opacity: .65;
    background-color: #141414;
    padding-top: 5px;

}
/*max-height: 450px;
    border-bottom: 2px solid #E6EAED;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    -ms-box-sizing: border-box;
    box-sizing: border-box;
    padding-top: 30px;
    padding-bottom: 70px;
    margin-top: 45px;*/

